--- a/scorekeeper_flutter/web/index.html
+++ b/scorekeeper_flutter/web/index.html
@@ -28,6 +28,8 @@
 
   <title>scorekeeper_flutter</title>
   <link rel="manifest" href="manifest.json">
+
+  <link type="text/css" rel="stylesheet" href="https://www.gstatic.com/firebasejs/ui/4.6.1/firebase-ui-auth.css" />
 </head>
 <body>
   <!-- This script installs service_worker.js to provide PWA functionality to
@@ -41,5 +43,46 @@
     }
   </script>
   <script src="main.dart.js" type="application/javascript"></script>
+  <!-- Required for using firebase in the web version -->
+  <!-- https://firebase.google.com/support/release-notes/js -->
+  <!-- The core Firebase JS SDK is always required and must be listed first -->
+  <script src="https://www.gstatic.com/firebasejs/8.3.0/firebase-app.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/8.3.0/firebase-auth.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/8.3.0/firebase-analytics.js"></script>
+
+  <!-- Firebase Auth UI -->
+  <script src="https://www.gstatic.com/firebasejs/ui/4.6.1/firebase-ui-auth.js"></script>
+
+  <script>
+    // Your web app's Firebase configuration
+    // For Firebase JS SDK v7.20.0 and later, measurementId is optional
+    var firebaseConfig = {
+      apiKey: "AIzaSyAussbnKNYHXxiZzwERfT0-WpCT5rcCdms",
+      authDomain: "scorekeeper-flutter-poc-v1.firebaseapp.com",
+      projectId: "scorekeeper-flutter-poc-v1",
+      storageBucket: "scorekeeper-flutter-poc-v1.appspot.com",
+      messagingSenderId: "235421583900",
+      appId: "1:235421583900:web:0cca330732902f5afb6dd9",
+      measurementId: "G-NMGCCKCHN2"
+    };
+    // Initialize Firebase
+    firebase.initializeApp(firebaseConfig);
+    firebase.analytics();
+
+    // Initialize the FirebaseUI Widget using Firebase.
+    var ui = new firebaseui.auth.AuthUI(firebase.auth());
+    ui.start('#firebaseui-auth-container', {
+      signInOptions: [
+        // firebase.auth.EmailAuthProvider.PROVIDER_ID,
+        // List of OAuth providers supported.
+        firebase.auth.GoogleAuthProvider.PROVIDER_ID,
+        firebase.auth.FacebookAuthProvider.PROVIDER_ID,
+        // firebase.auth.TwitterAuthProvider.PROVIDER_ID,
+        // firebase.auth.GithubAuthProvider.PROVIDER_ID
+      ],
+      // Other config options...
+    });
+  </script>
+
 </body>
 </html>
